--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "build.js",
   "scripts": {
-    "build": "node build.js"
+    "build": "node builder.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/MarcLindenbach/lindenbach.ca#readme",
   "devDependencies": {
+    "chokidar": "^3.5.1",
     "fs-extra": "^10.0.0"
   }
 }
